Support get schema version endpoint (#60)